checkout has z-index issue

--- a/apps/remi/src/app/app.scss
+++ b/apps/remi/src/app/app.scss
@@ -43,7 +43,7 @@ body {
   transition-property: -webkit-transform;
   transition-property: transform;
   transform: translate3d(0px, -473px, 0px);
-  transition-duration: 250ms;
+  transition-duration: 350ms;
   transition-delay: 300ms;
   .overlay-primary {
     background: var(--app-primary-color);
