--- a/apps/remi/src/app/pages/cart/style.scss
+++ b/apps/remi/src/app/pages/cart/style.scss
@@ -3,7 +3,7 @@ remi-cart {
   min-height: 100vh;
 
   header {
-    margin-top: -50px;
+    margin-top: 20px;
     color: white;
   }
 
